--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,6 +42,16 @@ h1{
     font-size: 3rem;
     color: var(--cyan);
 }
-.done{
-    color: red;
+ul{
+    list-style: none;
+}
+li{
+    font-weight: 600;
+
+}
+#todo-list .todo.done{
+    color: var(--violet);
+    text-decoration: line-through;
+    font-weight: 400;
+
 }
