--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,22 +28,28 @@ body{
 }
 .wrapper{
     background-color: var(--white);
-    width: 600px;
+    min-width: 400px;
+    width: fit-content;
     height: fit-content;
-    padding: 1rem;
+    padding: 1rem 0;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 1.2rem;
 }
 h1{
     margin-bottom: 1.5rem;
-    font-size: 3rem;
+    font-size: 4rem;
     color: var(--cyan);
 }
 ul{
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 li{
     font-weight: 600;
@@ -53,5 +59,29 @@ li{
     color: var(--violet);
     text-decoration: line-through;
     font-weight: 400;
-
+}
+.add-todo{
+    margin-top: 1rem;
+    min-width: 400px;
+    text-align: center;
+    display: flex;
+}
+input{
+    width: 95%;
+    height: 30px;
+    border-radius: 5px 0 0 5px;
+    border: none;
+    padding-left: 1rem;
+    font-family: inherit;
+    font-size: .85rem;
+    color: var(--blue);
+}
+.btn-add{
+    height: 30px;
+    width: 30px;
+    border: none;
+    background-color: var(--cyan);
+    color: var(--white);
+    font-size: 1.5rem;
+    border-radius: 0 5px 5px 0;
 }
