--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,14 +24,13 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 .wrapper{
     background-color: var(--white);
     min-width: 400px;
     width: fit-content;
     height: fit-content;
-    padding: 1rem 0;
+    padding: 1rem;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -46,6 +45,7 @@ h1{
 }
 ul{
     list-style: none;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,6 +53,7 @@ ul{
 }
 li{
     font-weight: 600;
+    cursor: pointer;
 
 }
 #todo-list .todo.done{
@@ -84,4 +85,5 @@ input{
     color: var(--white);
     font-size: 1.5rem;
     border-radius: 0 5px 5px 0;
+    cursor: pointer;
 }
