--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,12 +54,22 @@ ul{
 li{
     font-weight: 600;
     cursor: pointer;
-
+    width: 80%;
+    margin: .25rem auto;
+    padding: .15rem .45rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border: 2px solid var(--brown);
+    border-radius: 5px;
 }
 #todo-list .todo.done{
     color: var(--violet);
     text-decoration: line-through;
     font-weight: 400;
+}
+.fa-trash-can{
+    color: var(--orange);
 }
 .add-todo{
     margin-top: 1rem;
@@ -69,21 +79,23 @@ li{
 }
 input{
     width: 95%;
-    height: 30px;
+    height: 40px;
     border-radius: 5px 0 0 5px;
     border: none;
-    padding-left: 1rem;
+    padding-left: 3.5rem;
     font-family: inherit;
-    font-size: .85rem;
+    font-size: 1.1rem;
     color: var(--blue);
 }
 .btn-add{
-    height: 30px;
+    height: 40px;
     width: 30px;
     border: none;
     background-color: var(--cyan);
     color: var(--white);
-    font-size: 1.5rem;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
+}
+.fa-plus{
+    font-size: .85rem;
 }
