--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,7 +71,12 @@ li{
 .fa-square{
     font-size: .85rem;
     margin-right: .25rem;
+    transition: all 200ms ease;
 
+}
+.fa-square:hover{
+    background-color: var(--violet);
+   color: var(--violet);
 }
 .squaredone{
     background-color: var(--violet);
@@ -79,6 +84,28 @@ li{
 }
 .fa-trash-can{
     color: var(--orange);
+    transition: 450ms ease;
+}
+.fa-trash-can:hover{
+    transform: scale(1.1);
+    animation: shake 0.6s infinite;
+}
+@keyframes shake{
+    0%{
+        transform: translate(0px,0px) rotate(0deg);
+    }
+    25%{
+        transform: translate(1px,1px) rotate(1deg);
+    }
+    50%{
+        transform: translate(-1px,-1px) rotate(-1deg);
+    }
+    75%{
+        transform: translate(2px,2px) rotate(2deg);
+    }
+    100%{
+        transform: translate(-1px,-1px) rotate(-2deg);
+    }
 }
 .add-todo{
     margin-top: 1rem;
@@ -91,6 +118,7 @@ input{
     height: 40px;
     border-radius: 5px 0 0 5px;
     border: none;
+    outline: none;
     padding-left: 3.5rem;
     font-family: inherit;
     font-size: 1.1rem;
@@ -100,6 +128,11 @@ input::placeholder{
     color: var(--blue);
     opacity: .5;
     font-family: inherit;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 .btn-add{
     height: 40px;
@@ -112,4 +145,10 @@ input::placeholder{
 }
 .fa-plus{
     font-size: .85rem;
+    transition: 250ms ease;
+
+}
+.fa-plus:hover{
+    transform: scale(1.3);
+
 }
