--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,7 @@
 }
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--blue);
 }
 .container{
     background-color: var(--blue);
